--- a/app/views/supply_teachers/journey/temp_to_perm_calculator.html.erb
+++ b/app/views/supply_teachers/journey/temp_to_perm_calculator.html.erb
@@ -5,42 +5,42 @@
     <%= render partial: 'shared/error_summary', locals: { errors: @journey.errors } %>
     <%= form_tag @form_path, method: :get do %>
       <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
-      <%= govuk_form_group_with_optional_error(@journey, :contract_start_day, :contract_start_month, :contract_start_year) do %>
-        <%= govuk_fieldset_with_optional_error(@journey, :contract_start_day, :contract_start_month, :contract_start_year) do %>
+      <%= govuk_form_group_with_optional_error(@journey, :contract_start_date_day, :contract_start_date_month, :contract_start_date_year) do %>
+        <%= govuk_fieldset_with_optional_error(@journey, :contract_start_date_day, :contract_start_date_month, :contract_start_date_year) do %>
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
             <h1 class="govuk-fieldset__heading">
               <%= t('.contract_start_question') %>
             </h1>
           </legend>
-          <%= display_error(@journey, :contract_start_day) %>
-          <%= display_error(@journey, :contract_start_month) %>
-          <%= display_error(@journey, :contract_start_year) %>
+          <%= display_error(@journey, :contract_start_date_day) %>
+          <%= display_error(@journey, :contract_start_date_month) %>
+          <%= display_error(@journey, :contract_start_date_year) %>
           <span id="contract-start-hint" class="govuk-hint">
             <%= t('.contract_start_question_hint') %>
           </span>
           <div class="govuk-date-input" id="contract-start">
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="contract_start_day">
+                <label class="govuk-label govuk-date-input__label" for="contract_start_date_day">
                   Day
                 </label>
-                <%= text_field_tag :contract_start_day, @journey.current_step.contract_start_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_day, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :contract_start_date_day, @journey.current_step.contract_start_date_day, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_date_day, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="contract_start_month">
+                <label class="govuk-label govuk-date-input__label" for="contract_start_date_month">
                   Month
                 </label>
-                <%= text_field_tag :contract_start_month, @journey.current_step.contract_start_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_month, %w[govuk-date-input__input govuk-input--width-2]) %>
+                <%= text_field_tag :contract_start_date_month, @journey.current_step.contract_start_date_month, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_date_month, %w[govuk-date-input__input govuk-input--width-2]) %>
               </div>
             </div>
             <div class="govuk-date-input__item">
               <div class="govuk-form-group">
-                <label class="govuk-label govuk-date-input__label" for="contract_start_year">
+                <label class="govuk-label govuk-date-input__label" for="contract_start_date_year">
                   Year
                 </label>
-                <%= text_field_tag :contract_start_year, @journey.current_step.contract_start_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_year, %w[govuk-date-input__input govuk-input--width-4]) %>
+                <%= text_field_tag :contract_start_date_year, @journey.current_step.contract_start_date_year, pattern: '[0-9]*', class: css_classes_for_input(@journey, :contract_start_date_year, %w[govuk-date-input__input govuk-input--width-4]) %>
               </div>
             </div>
           </div>
