--- a/app/views/apprenticeships/home/index.html.erb
+++ b/app/views/apprenticeships/home/index.html.erb
@@ -25,7 +25,7 @@
         <li><%= t('.know_weather_you_would_like_shared_training') %></li>
       </ul>
 
-      <%= link_to t('.start_now'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.start_finding_supply_teachers') %>
+      <%= link_to t('.start_now'), apprenticeships_search_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.start_finding_apprenticeships') %>
 
     </div>
   </div>
