--- a/app/views/facilities_management/select_locations/select_location.html.erb
+++ b/app/views/facilities_management/select_locations/select_location.html.erb
@@ -1,5 +1,19 @@
 <a href="/facilities-management" class="govuk-back-link">Back</a>
 
+<div id="location-error-message" name="location-error-message" hidden class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+    <ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#">You must select at least one location before clicking the save continue button</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+
 <div>
   <fieldset class="govuk-fieldset" aria-describedby="">
     <h1 class="govuk-heading-xl">
@@ -29,7 +43,7 @@
             <% if key2.start_with?(key) %>
               <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="<%= value2 %>">
-                  <div class="govuk-checkboxes">
+                  <div id="location-checkboxes" class="govuk-checkboxes">
                     <div class="govuk-checkboxes__item">
                       <input class="govuk-checkboxes__input" id="<%= key2 %>" name="<%= key2 %>" locationid="<%= value2 %>" type="checkbox" value="<%= key2 %>">
                       <label id="<%= key2 %>_label" class="govuk-label govuk-checkboxes__label" for="<%= key2 %>">
@@ -66,7 +80,7 @@
     </div>
   </div>
   <p>
-    <%= link_to 'Save and continue', '/facilities-management/select-locations', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', id:'save-locations-link', name:'save-locations-link'%>
+    <%= link_to 'Save and continue', '/facilities-management/select-services', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', id:'save-locations-link', name:'save-locations-link'%>
   </p>
 </div>
 <div class="govuk-grid-column-one-third">
