--- a/app/views/facilities_management/select_services/select_services.html.erb
+++ b/app/views/facilities_management/select_services/select_services.html.erb
@@ -1,2 +1,72 @@
-<h1>FacilitiesManagement::SelectServices#select_services</h1>
-<p>Find me in app/views/facilities_management/select_services/select_services.html.erb</p>
+<a href="/facilities-management/select-locations" class="govuk-back-link">Back</a>
+<div id="service-error-message" name="service-error-message" hidden class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+    <ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#">You must select at least one service before clicking the save continue button</a>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div>
+  <fieldset class="govuk-fieldset" aria-describedby="">
+    <h1 class="govuk-heading-xl">
+      Add your FM services
+    </h1>
+  </fieldset>
+  <p class="govuk-body">
+    Add/Choose/Select/Pick one or multiple FM services that you think/plan/prepare/consider/look to buy/purchase
+  </p>
+</div>
+<div class="govuk-grid-column-two-thirds">
+  <div class="govuk-accordion" data-module="accordion" id="services-accordion" name="services-accordion">
+    <% @services.each do |service| %>
+      <div class="govuk-accordion__section ">
+        <div class="govuk-accordion__section-header">
+          <h2 class="govuk-accordion__section-heading">
+            <span class="govuk-accordion__section-button" id="<%= service['code'] %>"><%= service['name'] %></span>
+          </h2>
+        </div>
+        <div id="<%= service['code'] %>-content" class="govuk-accordion__section-content" aria-labelledby="<%= service['name'] %>">
+          <% @workPackages.each do |workPackage| %>
+
+            <% if workPackage['work_package_code'].start_with?(service['code']) %>
+              <div class="govuk-form-group">
+                <fieldset class="govuk-fieldset" aria-describedby="<%= workPackage['name'] %>">
+                  <div id="services-checkboxes" class="govuk-checkboxes">
+                    <div class="govuk-checkboxes__item">
+                      <input title="<%= workPackage['name'] %>" class="govuk-checkboxes__input" id="<%= workPackage['code'].sub('.','-') %>" name="<%= workPackage['code'].sub('.','') %>" serviceid="<%= workPackage['name'] %>" type="checkbox" value="<%= workPackage['code'] %>">
+                      <label class="govuk-label govuk-checkboxes__label" for="<%=workPackage['code'] %>">
+                        <%= workPackage['name'] %>
+                      </label>
+                    </div>
+                </fieldset>
+              </div>
+            <% end %>
+          <% end %>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <p>
+    <%= link_to 'Save and continue', '/facilities-management/select-services', role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', id:'save-services-link', name:'save-services-link'%>
+  </p>
+</div>
+<div class="govuk-grid-column-one-third">
+  <div class="filter-selection">
+    <header>
+      <div class="filter-selection__header">
+        <a id="remove-all-link" name="remove-all-link" class="remove-all js-filter" href="">Remove all</a>
+        <h2 class="font-weight-700">
+          <span id="selected-service-count" name="selected-service-count" class="font-size--18">0</span>
+          Services added
+        </h2>
+      </div>
+    </header>
+    <ul id="selected-fm-services" name="selected-fm-services" class="govuk-!-padding-0 font-size--10"></ul>
+  </div>
+
