--- a/app/views/apprenticeships/home/training_provider_list.html.erb
+++ b/app/views/apprenticeships/home/training_provider_list.html.erb
@@ -7,11 +7,16 @@
 
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-m"><%= t('.subtitle') %></h2>
-        <p><%= link_to t('.download_file_info') %></p>
+        <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <%= t('.warning_text') %>
+          </strong>
+        </div>
+        <p><%= link_to t('.download_file_info'), 'test.csv',class: 'supplier-record__file-download' %></p>
         <p><%= t('.other_documents_title') %></p>
-        <p><%= link_to t('.basic_terms_and_conditions') %></p>
-        <p><%= link_to t('.customer_guidance_template') %></p>
+        <p><%= link_to t('.basic_terms_and_conditions'), 'test.doc', class: 'supplier-record__file-download' %></p>
+        <p><%= link_to t('.customer_guidance_template'), 'test.doc', class: 'supplier-record__file-download' %></p>
         <h2 class="govuk-heading-m"><%= t('.choices_used') %></h2>
         <h3 class="govuk-heading-m"><%= t('.requirements') %></h3>
         <table class="govuk-table">
